--- a/WSUI.Module/View/ContactFileDetailsView.xaml
+++ b/WSUI.Module/View/ContactFileDetailsView.xaml
@@ -28,8 +28,8 @@
             </Grid.ColumnDefinitions>
             <TextBox
                                 Text="{Binding Path=SearchAttachmentString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                                Controls:TextboxHelper.Watermark="Enter Search Context for Attachment"
-                                Controls:TextboxHelper.ClearTextButton="True"
+                                Controls:TextBoxHelper.Watermark="Enter Search Context for Attachment"
+                                Controls:TextBoxHelper.ClearTextButton="True"
                                 service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}"
                                 VerticalAlignment="Center"
                                 VerticalContentAlignment="Center"
