--- a/WSUI.Module/View/AdvancedSearchSettingsView.xaml
+++ b/WSUI.Module/View/AdvancedSearchSettingsView.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl x:Class="WSUI.Module.View.AllFilesSettingsView"
+﻿<UserControl x:Class="WSUI.Module.View.AdvancedSearchSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:Service="clr-namespace:WSUI.Module.Service"
-                              mc:Ignorable="d" 
-            FocusVisualStyle="{x:Null}" >
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\Service\ResourceTemplate.xaml" />
                 <ResourceDictionary Source="../Service/SearchButtonStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -23,18 +22,12 @@
             </Grid.ColumnDefinitions>
             <TextBox  
                Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                Controls:TextBoxHelper.Watermark="Enter Search Criteria"
-                Controls:TextBoxHelper.ClearTextButton="True"
-                Controls:TextBoxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
-                Controls:TextBoxHelper.CustomTextButton="True"
-                Controls:TextBoxHelper.CustomTextButtonContent="{StaticResource AdvancedSearchButtonContent}"
-                Controls:TextBoxHelper.CustomTextButtonCommand="{Binding ShowAdvancedSearchCommand}"
                 Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                 IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"
+                IsReadOnly="True"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
-                
-                    Grid.Column="0" MinHeight="32" />
+                Grid.Column="0" MinHeight="32" />
 
             <!---->
             <Button Command="{Binding Path=SearchCommand}"
