--- a/WSUI.Module/View/AttachmentSettingsView.xaml
+++ b/WSUI.Module/View/AttachmentSettingsView.xaml
@@ -21,9 +21,9 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  
-                Controls:TextboxHelper.Watermark="Enter Search Criteria"
-                Controls:TextboxHelper.ClearTextButton="True"
-                Controls:TextboxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
+                Controls:TextBoxHelper.Watermark="Enter Search Criteria"
+                Controls:TextBoxHelper.ClearTextButton="True"
+                Controls:TextBoxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
                 Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
