--- a/WSUI.Module/View/ContactSettingsView.xaml
+++ b/WSUI.Module/View/ContactSettingsView.xaml
@@ -22,21 +22,14 @@
             </Grid.ColumnDefinitions>
             
                 <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                Controls:TextboxHelper.Watermark="Enter Search Criteria"
-                Controls:TextboxHelper.ClearTextButton="True"
-                Controls:TextboxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
+                Controls:TextBoxHelper.Watermark="Enter Search Criteria"
+                Controls:TextBoxHelper.ClearTextButton="True"
+                Controls:TextBoxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
                         Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                 Grid.Column="0" MinHeight="32"
                         IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
-            <!--<localctrl:TextboxAutoComplete SearchText="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                                DataSource="{Binding Path=DataSourceSuggest,UpdateSourceTrigger=PropertyChanged}"
-                                            Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
-                                Height="24"
-                                VerticalAlignment="Top" HorizontalAlignment="Stretch"
-                                Grid.Column="0" MinHeight="32"
-                                IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>-->
             <Button Command="{Binding Path=SearchCommand}" 
                     Style="{StaticResource SearchButton}"
                 Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" MinHeight="32" 
