--- a/WSUI.Module/View/AdvancedSearchSettingsView.xaml
+++ b/WSUI.Module/View/AdvancedSearchSettingsView.xaml
@@ -10,6 +10,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Service/ResourceTemplate.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="../Service/SearchButtonStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -24,10 +25,14 @@
                Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
                 Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                 IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"
+                 Controls:TextBoxHelper.CustomTextButton="True"
+                Controls:TextBoxHelper.CustomTextButtonContent="{StaticResource AdvancedSearchButtonContent}"
+                Controls:TextBoxHelper.CustomTextButtonCommand="{Binding ShowAdvancedSearchCommand}"
+                Controls:TextBoxHelper.CustomTextButtonTooltip="Close Advanced Searching"
                 IsReadOnly="True"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
-                Grid.Column="0" MinHeight="32" />
+                Grid.Column="0" Height="32" />
 
             <!---->
             <Button Command="{Binding Path=SearchCommand}"
