--- a/WSUI.Module/View/AllFilesSettingsView.xaml
+++ b/WSUI.Module/View/AllFilesSettingsView.xaml
@@ -24,17 +24,16 @@
             <TextBox  
                Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
                 Controls:TextBoxHelper.Watermark="Enter Search Criteria"
-                Controls:TextBoxHelper.ClearTextButton="True"
-                Controls:TextBoxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
                 Controls:TextBoxHelper.CustomTextButton="True"
                 Controls:TextBoxHelper.CustomTextButtonContent="{StaticResource AdvancedSearchButtonContent}"
                 Controls:TextBoxHelper.CustomTextButtonCommand="{Binding ShowAdvancedSearchCommand}"
+                Controls:TextBoxHelper.CustomTextButtonTooltip="{StaticResource AdvancedSearchTooltip}"
                 Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                 IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
                 
-                    Grid.Column="0" MinHeight="32" />
+                    Grid.Column="0" Height="32" />
 
             <!---->
             <Button Command="{Binding Path=SearchCommand}"
