--- a/WSUI.Module/View/ContactSettingsView.xaml
+++ b/WSUI.Module/View/ContactSettingsView.xaml
@@ -9,6 +9,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="..\Service\ResourceTemplate.xaml" />
                 <ResourceDictionary Source="../Service/SearchButtonStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -23,12 +24,14 @@
             
                 <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                 Controls:TextBoxHelper.Watermark="Enter Search Criteria"
-                Controls:TextBoxHelper.ClearTextButton="True"
-                Controls:TextBoxHelper.ClearTextCommand="{Binding ClearCriteriaCommand}"
+                Controls:TextBoxHelper.CustomTextButton="True"
+                Controls:TextBoxHelper.CustomTextButtonContent="{StaticResource AdvancedSearchButtonContent}"
+                Controls:TextBoxHelper.CustomTextButtonCommand="{Binding ShowAdvancedSearchCommand}"
+                Controls:TextBoxHelper.CustomTextButtonTooltip="{StaticResource AdvancedSearchTooltip}"
                 VerticalAlignment="Center"    
                 VerticalContentAlignment="Center"
                         Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
-                Grid.Column="0" MinHeight="32"
+                Grid.Column="0" Height="32"
                         IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
             <Button Command="{Binding Path=SearchCommand}" 
                     Style="{StaticResource SearchButton}"
