--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -230,10 +230,10 @@
                                     <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" Grid.Row="0" />
 
                                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="0 2 0 1" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                                    <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2 2 2 1" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=From}"></ctrl:HightliteTextBlock>
+                                    <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2 2 2 1" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=From}"></ctrl:HightliteTextBlock>
                                     <TextBlock Grid.Column="4" Grid.Row="0" Margin="1 2 1 1" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
-                                    <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
+                                    <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
                                 </Grid>
                             </Grid>
         <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="0" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
@@ -263,7 +263,7 @@
 
                 <TextBlock Grid.Column="1" Margin="5" TextWrapping="Wrap">
                     <Run>Search for "</Run>
-                    <Run Text="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" FontWeight="Bold"></Run>
+                    <Run Text="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" FontWeight="Bold"></Run>
                     <Run>" returned no matches. Try different keywords.</Run>
                 </TextBlock>
         </Grid>
@@ -301,10 +301,10 @@
                 <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" Grid.Row="0" />
 
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="0 2 0 2" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=From}"></ctrl:HightliteTextBlock>
+                <ctrl:HightliteTextBlock Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Margin="2" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=From}"></ctrl:HightliteTextBlock>
                 <TextBlock Grid.Column="4" Grid.Row="0" Margin="2 2 1 2" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
-                <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
+                <ctrl:HightliteTextBlock Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="1" Margin="0 1 0 2" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
                 <i:Interaction.Behaviors>
                     <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
                 </i:Interaction.Behaviors>
@@ -347,7 +347,7 @@
                     </StackPanel>
                 </Grid.ToolTip>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\user.png" />
-                <ctrl:HightliteHyperlink Grid.Column="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Converter={StaticResource objectConverter}}">
+                <ctrl:HightliteHyperlink Grid.Column="2" Margin="5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Converter={StaticResource objectConverter}}">
                     <ctrl:HightliteHyperlink.Style>
                         <Style TargetType="ctrl:HightliteTextBlockBase">
                             <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue" />
@@ -393,7 +393,7 @@
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemName,Converter={StaticResource ResourceKey=nameConverter}}" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
                            Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
 
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
 
@@ -432,7 +432,7 @@
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemUrl,Converter={StaticResource ResourceKey=nameConverter}}" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
                            Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
                 <i:Interaction.Behaviors>
@@ -453,7 +453,7 @@
                 </Grid.ColumnDefinitions>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\date.png" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" />
 
                 <i:Interaction.Behaviors>
@@ -488,7 +488,7 @@
                 </Grid.ToolTip>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\picture.png" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
                 <i:Interaction.Behaviors>
                     <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
@@ -500,7 +500,7 @@
             <DockPanel Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}},Path=ActualWidth,Converter={StaticResource ActualWidthConverter}}" HorizontalAlignment="Stretch" LastChildFill="True">
                 <Image Style="{StaticResource ImageStyle}" DockPanel.Dock="Left" Grid.Column="0" Source="..\Images\more1.png" />
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                    <ctrl:HightliteHyperlink Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}">
+                    <ctrl:HightliteHyperlink Margin="5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}">
                         <ctrl:HightliteHyperlink.Style>
                             <Style TargetType="ctrl:HightliteTextBlockBase">
                                 <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue" />
