--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -383,17 +383,17 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Name: "></TextBlock>
-                            <TextBlock Text="{Binding ItemName}"></TextBlock>
+                            <TextBlock Text="{Binding Filename}"></TextBlock>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />    
                         </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
-                <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemName,Converter={StaticResource ResourceKey=nameConverter}}" />
+                <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=Filename,Converter={StaticResource ResourceKey=nameConverter}}" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
                            Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=Filename}" />
 
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
 
@@ -421,7 +421,7 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Name: "></TextBlock>
-                            <TextBlock Text="{Binding ItemName}"></TextBlock>
+                            <TextBlock Text="{Binding Filename}"></TextBlock>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />    
@@ -429,10 +429,10 @@
                     </StackPanel>
                 </Grid.ToolTip>
 
-                <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemUrl,Converter={StaticResource ResourceKey=nameConverter}}" />
+                <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=Filename,Converter={StaticResource ResourceKey=nameConverter}}" />
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
                            Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=Filename}" />
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
                 <i:Interaction.Behaviors>
