refactored contact details, advanced search.

--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -224,6 +224,9 @@
                                             <StackPanel Orientation="Horizontal">
                                                 <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                                             </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Path=OutlookConversationId}" />
+                                            </StackPanel>
                                         </StackPanel>
                                     </Grid.ToolTip>
 
@@ -295,6 +298,9 @@
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                         </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Path=OutlookConversationId}" />
+                                            </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
 
